# ftxui-minesweeper

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: ClickResult.h  board.h
release/: build.ninja
release/.cmake/api/v1/reply/: cache-v2-a743d9196d6605ce289e.json  cmakeFiles-v1-366207c9e63be9aad620.json  codemodel-v2-c8111a3aa4c2c3d987f3.json  directory-_deps.ftxui-build-Release-bf36045d121a159b880c.json  directory-_deps.ftxui-build.doc-Release-0784941768ac246aa630.json  directory-_deps.ftxui-build.examples-Release-bbeef2cab16ac9522687.json  index-2024-02-07T08-40-37-0037.json  target-Minesweeper-Release-c79e18daa74c4929456c.json  target-component-Release-0a84c4b506be24981125.json  target-dom-Release-73360e2ad03cb7317456.json  target-screen-Release-91c125ac9cc54d2476e5.json  toolchains-v1-90368ec63c48872068e9.json
source/: board.cpp  main.cpp
src/: board.cpp  main.cpp
